mockitorestapi/src/main/java/com/example/demo/services/error/manufacturer/package-info.java
package com.example.demo.services.error.manufacturer;